@@ -15,11 +15,14 @@ protons.readout=Protons:
 neutrons.name=Neutrons
 neutrons.readout=Neutrons:
 
-show.labels = Show Labels
+show.name = Show name
+show.neutralIon = Show neutral/ion
+show.stableUnstable= Show stable/unstable
 
+neutral.atom = Neutral Atom
 indicator.element=Element
 indicator.symbol=Symbol
-indicator.mass=Mass
+indicator.mass.number=Mass Number
 indicator.charge=Charge
 
 positive.ion = + Ion
