@@ -22,4 +22,4 @@ protons.readout=protonau\:
 neutrons.name=Niwtronau
 electrons.name=Electronau
 element.beryllium.name=Beryliwm
-indicator.mass=M\u00E1s
+indicator.mass.number=M\u00E1s
