@@ -29,5 +29,5 @@ element.helium.name=\u0389\u03BB\u03B9\u03BF
 protons.readout=\u03C0\u03C1\u03C9\u03C4\u03CC\u03BD\u03B9\u03B1
 neutrons.name=\u039D\u03B5\u03C4\u03C1\u03CC\u03BD\u03B9\u03B1
 electrons.name=\u0397\u03BB\u03B5\u03BA\u03C4\u03C1\u03CC\u03BD\u03B9\u03B1
-indicator.mass=\u039C\u03AC\u03B6\u03B1
+indicator.mass.number=\u039C\u03AC\u03B6\u03B1
 element.beryllium.name=\u0392\u03B7\u03C1\u03CD\u03BB\u03BB\u03B9\u03BF
