@@ -28,5 +28,5 @@ element.helium.name=\u05D4\u05DC\u05D9\u05D5\u05DD
 protons.readout=\u05E4\u05E8\u05D5\u05D8\u05D5\u05E0\u05D9\u05DD
 neutrons.name=\u05E0\u05D5\u05D9\u05D8\u05E8\u05D5\u05E0\u05D9\u05DD
 electrons.name=\u05D0\u05DC\u05E7\u05D8\u05E8\u05D5\u05E0\u05D9\u05DD
-indicator.mass=\u05DE\u05D0\u05E1\u05D4
+indicator.mass.number=\u05DE\u05D0\u05E1\u05D4
 element.beryllium.name=\u05D1\u05E8\u05D9\u05DC\u05D9\u05D5\u05DD
