@@ -28,5 +28,5 @@ element.helium.name=\uD5EC\uB968
 protons.readout=\uC591\uC131\uC790\:
 neutrons.name=\uC911\uC131\uC790
 electrons.name=\uC804\uC790
-indicator.mass=\uC9C8\uB7C9
+indicator.mass.number=\uC9C8\uB7C9
 element.beryllium.name=\uBCA0\uB9B4\uB968
