@@ -28,7 +28,7 @@ element.beryllium.name=beryl
 element.arsenic.symbol=As
 element.boron.symbol=B
 electrons.readout=elektrony\:
-indicator.mass=masa
+indicator.mass.number=masa
 electrons.name=elektrony
 electron.model.cloud=chmura
 element.barium.symbol=Ba
