@@ -28,5 +28,5 @@ element.helium.name=\u0425\u0435\u043B\u0438\u0458\u0443\u043C
 protons.readout=\u043F\u0440\u043E\u0442\u043E\u043D\u0438
 neutrons.name=\u041D\u0415\u0423\u0422\u0420\u041E\u041D\u0418
 electrons.name=\u0415\u041B\u0415\u041A\u0422\u0420\u041E\u041D\u0418
-indicator.mass=\u041C\u0430\u0441\u0430
+indicator.mass.number=\u041C\u0430\u0441\u0430
 element.beryllium.name=\u0411\u0435\u0440\u0438\u043B\u0438\u0458\u0443\u043C
