@@ -24,4 +24,4 @@ unstable=Instabil
 protons.readout=protoner\:
 neutrons.name=Neutroner
 electrons.name=Elektroner
-indicator.mass=Massa
+indicator.mass.number=Massa
