@@ -29,5 +29,5 @@ element.helium.name=Helyum
 protons.readout=protonlar\:
 neutrons.name=N\u00F6tronlar
 electrons.name=Elektronlar
-indicator.mass=K\u00FCtle
+indicator.mass.number=K\u00FCtle
 element.beryllium.name=Berilyum
