@@ -45,7 +45,7 @@ element.boron.name=Bor
 element.vanadium.symbol=V
 element.iridium.symbol=Ir
 element.manganese.symbol=Mn
-indicator.mass=Kh\u1ED1i l\u01B0\u1EE3ng
+indicator.mass.number=Kh\u1ED1i l\u01B0\u1EE3ng
 int.minControlPanelWidth=215
 element.aluminium.symbol=Al
 element.scandium.symbol=Sc
