@@ -45,7 +45,7 @@ element.boron.name=Boron \u787C
 element.vanadium.symbol=V
 element.iridium.symbol=Ir
 element.manganese.symbol=Mn
-indicator.mass=\u8CEA\u91CF
+indicator.mass.number=\u8CEA\u91CF
 int.minControlPanelWidth=215
 element.aluminium.symbol=Al
 element.scandium.symbol=Sc
