@@ -23,13 +23,16 @@ public class BuildAnAtomStrings {
     public static final String ELECTRON_MODEL = getString( "electron.model" );
     public static final String ELECTRON_MODEL_ORBITS = getString( "electron.model.orbits" );
     public static final String ELECTRON_MODEL_CLOUD = getString( "electron.model.cloud" );
-    public static final String SHOW_LABELS = getString( "show.labels" );
+    public static final String SHOW_NAME = getString( "show.name" );
+    public static final String SHOW_NEUTRAL_ION = getString( "show.neutralIon" );
+    public static final String SHOW_STABLE_UNSTABLE = getString( "show.stableUnstable" );
     public static final String INDICATOR_ELEMENT = getString( "indicator.element" );
     public static final String INDICATOR_SYMBOL = getString( "indicator.symbol" );
-    public static final String INDICATOR_MASS = getString( "indicator.mass" );
+    public static final String INDICATOR_MASS_NUMBER = getString( "indicator.mass.number" );
     public static final String INDICATOR_CHARGE = getString( "indicator.charge" );
     public static final String POSITIVE_ION = getString( "positive.ion" );
     public static final String NEGATIVE_ION = getString( "negative.ion" );
+    public static final String NEUTRAL_ATOM = getString( "neutral.atom" );
     public static final String UNSTABLE = getString( "unstable" );
     public static final String ELEMENT_NONE_SYMBOL = getString( "element.none.symbol" );
     public static final String ELEMENT_NONE_NAME = getString( "element.none.name" );
