@@ -16,17 +16,30 @@ import edu.umd.cs.piccolo.nodes.PText;
 public class IonIndicatorNode extends PNode {
     private static final Font ATOM_ION_FONT = new PhetFont( 28, true );
 
-    public IonIndicatorNode( final Atom atom, final BooleanProperty showLabels ) {
-        addChild( new PText(BuildAnAtomStrings.POSITIVE_ION) {{       //dummy text is never shown, just used for initial layout size
+    public IonIndicatorNode( final Atom atom, final BooleanProperty showLabels, final double maxWidth ) {
+        addChild( new PText( BuildAnAtomStrings.POSITIVE_ION ) {{       //dummy text is never shown, just used for initial layout size
             setFont( ATOM_ION_FONT );
             setTextPaint( Color.blue );
             final SimpleObserver observer = new SimpleObserver() {
                 public void update() {
-                    setVisible( showLabels.getValue() &&
-                                atom.getCharge() != 0 &&
-                                atom.getNumProtons() > 0 );//don't show the ion indicator when only electrons are present
-                    setText( atom.getCharge() > 0 ? BuildAnAtomStrings.POSITIVE_ION : BuildAnAtomStrings.NEGATIVE_ION );
-                    setTextPaint( atom.getCharge() > 0 ? Color.red : Color.blue );
+                    setVisible( showLabels.getValue() && atom.getNumProtons() > 0 );//don't show the ion indicator when only electrons are present
+                    if ( atom.getCharge() > 0 ) {
+                        setText( BuildAnAtomStrings.POSITIVE_ION );
+                        setTextPaint( Color.red );
+                    }
+                    else if ( atom.getCharge() < 0 ) {
+                        setText( BuildAnAtomStrings.NEGATIVE_ION );
+                        setTextPaint( Color.blue );
+                    }
+                    else {
+                        setText( BuildAnAtomStrings.NEUTRAL_ATOM );
+                        setTextPaint( Color.black );
+                    }
+//                    System.out.println( "getFullBounds().getWidth() = " + getFullBounds().getWidth() );
+                    setScale( 1.0 );
+                    if ( getFullBounds().getWidth() > maxWidth ) {
+                        scale( maxWidth / getFullBounds().getWidth() );
+                    }
                 }
             };
             atom.addObserver( observer );
