@@ -1,3 +1,4 @@
+> Added checkboxes for "show name", "show stable/unstable", "show neutral/ion"
 # 1.00.08 (45912) Nov 9, 2010
 Added developer control that causes unstable nuclei to be animated
 > Improved highlighting in periodic table
